Secondary Button content align bug fixing

--- a/css/general.css
+++ b/css/general.css
@@ -136,7 +136,10 @@ body {
   justify-content: center;
   align-items: center;
   line-height: 1;
-  margin-top: 0.4rem;
+}
+
+.text-and-icon-center ion-icon {
+  margin-bottom: 0.4rem;
 }
 
 .heading-primary,
